# fit-a-line

./: Cargo.toml  README.MD  datapoints.txt
src/: approximations.rs  main.rs
